--- a/index.html
+++ b/index.html
@@ -12,7 +12,43 @@
       <img src="./assets/bowtie-cat.png" alt="Profile image of cat wearing a bow tie." />
     </header>
     <main>
-      <!-- Student code goes here -->
+      <section class="card" id="html-section">
+        <h2>HTML</h2>
+          <ul>
+            <li>HTML stands for HyperText Markup Language.</li>
+            <li>Is responsible for defining the structure of a webpage.</li>
+            <li>The head element contations information about the webpage.</li>
+            <li>The title is a child of the head element and defines what is visible on the tab of the webpage.</li>
+            <li>The body element represents the visible content shown to the user.</li>
+          </ul>
+      </section>
+
+
+      <section class="card" id="css-section">
+        <h2>CSS</h2>
+          <ul>
+            <li>CSS stands for cascading style sheet.</li>
+            <li>Is responsible for styling how your webpage looks.</li>
+          </ul>
+      </section>
+
+
+      <section class="card" id="git-section">
+        <h2>Git</h2>
+          <ul>
+            <li>Git is used by web developers for version controlling.</li>
+            <li>git status: checks what branch we are currently on</li>
+            <li>git checkout -b branch-name: creates a new branch and switches to it</li>
+          </ul>
+      </section>
+
+
+      <section class="card" id="javascript-section">
+        <h2>JavaScript</h2>
+          <ul>
+            <li>JavaScript adds interactivity and logic to a webpage.</li>
+          </ul>
+      </section>
     </main>
 
     <footer>
