added CSS to project

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Prework Study Guide</title>
+    <link rel="stylesheet" href="./assets/style.css">
   </head>
   <body>
     <header id="top">
@@ -29,6 +30,10 @@
           <ul>
             <li>CSS stands for cascading style sheet.</li>
             <li>Is responsible for styling how your webpage looks.</li>
+            <li>A margin indicates how much space we want around the outside of an element.</li>
+            <li>A padding indicates how much space we want around the content inside an element.</li>
+            <li>Assigning style attributes to specific classes makes it easier to apply styles throughout the website.</li>
+            <li>A style sheet needs to be linked to an HTML file within its head section as metadata.</li>
           </ul>
       </section>
 
