--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <section class="card" id="css-section">
         <h2>CSS</h2>
           <ul>
-            <li>CSS stands for cascading style sheet.</li>
+            <li>CSS stands for cascading style sheets.</li>
             <li>Is responsible for styling how your webpage looks.</li>
             <li>A margin indicates how much space we want around the outside of an element.</li>
             <li>A padding indicates how much space we want around the content inside an element.</li>
@@ -53,6 +53,10 @@
         <h2>JavaScript</h2>
           <ul>
             <li>JavaScript adds interactivity and logic to a webpage.</li>
+            <li>A variable is a named container that allows us to store data in our code.</li>
+            <li>Control flow is the order in which a computer executes code in a script.</li>
+            <li>Functions must be called in order for them to run.</li>
+            <li>For loops allow a code block to run multiple times.</li>
           </ul>
       </section>
     </main>
